--- a/src/app.json
+++ b/src/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/index/main",
     "pages/logs/main",
-    "pages/counter/main",
+    "pages/linkUs/main",
     "pages/detail/main"
   ],
   "window": {
@@ -10,5 +10,8 @@
     "navigationBarBackgroundColor": "#6A13FE",
     "navigationBarTitleText": "骆驼校招",
     "navigationBarTextStyle": "light"
-  }
+  },
+  "navigateToMiniProgramAppIdList": [
+    "wx9dfd0ee8c2417c1a"
+  ]
 }
